v1.21.0 ・点字ブロックの線をタップして詳細を表示する機能のために、session_idが送られたらユーザの表示名、アイコン画像のリンク、タグの表示名を返す/api/tactile-session-infoというAPIを作った
